# zchat

./: .gitignore  .gitmodules  .mcp.json  CLAUDE.md  Makefile  README.md  claude.local.env  claude.local.env.example  claude.sh  commands.json  ergo.yaml  install.sh  ircd.db  pyproject.toml  pytest.ini  start.sh  stop.sh  wc-agent.sh  wc_agent  weechat-claude.toml
.artifacts/: .gitattributes  registry.json
.artifacts/bootstrap/: bootstrap-report.md  cs-env-report.json  cs-manifest.json  env-report.json  manifest.json  test-baseline-channel-server.json  test-baseline.json  v4-ralph-review.md
.artifacts/code-diffs/: diff-ctrl-c-cleanup-fix.md  diff-ergo-languages-fix.md  diff-restart-refactor.md  diff-v5-phase1.md  diff-v5-phase10.md  diff-v5-phase11.md  diff-v5-phase2.md  diff-v5-phase3.md  diff-v5-phase4.md  diff-v5-phase5.md  diff-v5-phase6.md  diff-v5-phase7.md  diff-v5-phase8.md  diff-v5-phase9.md  diff-weechat-cache-fix.md  diff-wsl2-proxy-fix.md
.artifacts/coverage/: coverage-matrix.md  cs-coverage-matrix.md
.artifacts/eval-docs/: eval-agent-dm-001.md  eval-cs-plugin-config-autonomy-014.md  eval-ctrl-c-orphan-007.md  eval-ergo-languages-004.md  eval-scoped-name-002.md  eval-v4-refactor-008.md  eval-v5-refactor-010.md  eval-weechat-cache-006.md  eval-wsl2-proxy-003.md
.artifacts/test-diffs/: test-diff-001.md  test-diff-002.md  test-diff-003.md  test-diff-004.md  test-diff-005.md  test-diff-v5-phase1.md  test-diff-v5-phase10.md  test-diff-v5-phase11.md  test-diff-v5-phase2.md  test-diff-v5-phase3.md  test-diff-v5-phase4.md  test-diff-v5-phase5.md  test-diff-v5-phase6.md  test-diff-v5-phase7.md  test-diff-v5-phase8.md  test-diff-v5-phase9.md
.artifacts/test-plans/: plan-agent-dm-004.md  plan-agent-restart-001.md  plan-ctrl-c-cleanup-008.md  plan-ergo-languages-005.md  plan-project-create-003.md  plan-restart-refactor-002.md  plan-v4-refactor-009.md  plan-v5-refactor-011.md  plan-weechat-cache-007.md  plan-wsl2-proxy-005.md
.claude/: settings.json
.github/workflows/: publish.yml  test.yml
docs/: design-decisions.md  dev-loop-guide.md  dev-loop-phases.md  dev-loop-templates.md  e2e-manual-test.md  manual-testing.md  releasing.md
docs/archive/: design-decisions.md  releasing.md
docs/dev/: agent.md  architecture.md  testing.md
docs/discuss/: 001-autoservice-prd.md  002-autoservice-user-stories.md  003-autoservice-full-journey.html  004-v5-refactor-plan.md  007-v6-prerelease-session2-note.md  008-v6-finalize-plan.md  009-v6-help-request-notification-design.md  010-v6-placeholder-card-edit-design-SUPERSEDED.md  011-v7-entry-as-coordinator.md  013-voice-overlay.md  014-voice-redesign.md  015-prod-reset-runbook.md  README.md
docs/guide/: 001-architecture.md  002-quick-start.md  004-migrate-guide.md  005-dev-guide.md  006-routing-config.md  007-plugin-guide.md  008-voice-setup.md  README.md  constraints.md  quickstart.md  usage.md
docs/plans/: 2026-03-21-prd-gap-fixes-plan.md  2026-04-06-palette-cleanup-plan.md  2026-04-06-zellij-migration-design.md  2026-04-06-zellij-plugin-plan.md
docs/spec/: channel-server-v5.md
scripts/: env-check.sh
tests/: conftest.py
tests/e2e/: conftest.py  e2e-cleanup.sh  e2e-setup.sh  e2e-test-manual.sh  e2e-test.sh  e2e-test.tape  helpers.sh  irc_probe.py  test-config.toml  test_agent_dm.py  test_e2e.py  test_irc_daemon.py  test_private_and_system_messages.py  test_zellij_lifecycle.py
tests/integration/: conftest.py  test_channel_bridge.py  test_private_and_channel.py  test_zenoh_pubsub.py
tests/pre_release/: .gitignore  conftest.py  reporting.py  run.sh  test_00_doctor.py  test_01_project.py  test_04_agent.py  test_04a_irc_chat.py  test_04b_remote_irc.py  test_07_self_update.py  verify_walkthrough.py  walkthrough-steps.sh  walkthrough.sh
tests/shared/: cli_runner.py  irc_probe.py  tmux_helpers.py
tests/unit/: test_agent_focus_hide.py  test_agent_lifecycle.py  test_agent_manager.py  test_audit_cli.py  test_auth.py  test_channel_cmd.py  test_config_cmd.py  (+36 more)
wc-agent/: agent_manager.py  cli.py  config.py  irc_manager.py  project.py  pyproject.toml
wc_protocol/: __init__.py  config.py  naming.py  signals.py  sys_messages.py  topics.py
wc_registry/: types.py
weechat-agent/: weechat-agent.py
weechat-channel-server/: README.md  message.py  pyproject.toml  server.py  tools.py
weechat-channel-server/.claude-plugin/: plugin.json
weechat-channel-server/commands/: broadcast.md  dm.md  join.md  reply.md
weechat-zchat-plugin/: zchat.py
weechat-zenoh/: helpers.py  weechat-zenoh.py  zenoh_sidecar.py
zchat/: _version.py
zchat-channel-server/: pyproject.toml  server.py
(+251 files in other folders)
