[project]
name = "zchat"
version = "0.1.0"
description = "Multi-agent collaboration over IRC"
requires-python = ">=3.11"
dependencies = [
    "libtmux>=0.55,<0.56",
    "typer[all]>=0.9.0",
    "zchat-protocol",
]

[tool.uv.sources]
zchat-protocol = { path = "zchat-protocol", editable = true }

[project.scripts]
zchat = "zchat.cli.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "irc>=20.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-order>=1.3.0",
    "pytest-timeout>=2.4.0",
]
