[project]
name = "zchat"
version = "0.3.0.dev15"
description = "Multi-agent collaboration over IRC"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "libtmux>=0.55,<0.56",
    "tomli-w>=1.0.0",
    "typer[all]>=0.9.0",
    "zchat-protocol>=0.3.0.dev15",
    "zchat-channel-server>=0.3.0.dev15",
]
license = "MIT"
authors = [{ name = "ezagent42" }]

[project.urls]
Homepage = "https://github.com/ezagent42/zchat"
Repository = "https://github.com/ezagent42/zchat"

[project.scripts]
zchat = "zchat.cli.app:app"

[tool.uv.sources]
zchat-protocol = { path = "zchat-protocol", editable = true }
zchat-channel-server = { path = "zchat-channel-server", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["zchat"]

[tool.hatch.build.targets.wheel.force-include]
"zchat/cli/templates" = "zchat/cli/templates"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-order>=1.3.0",
    "pytest-timeout>=2.4.0",
]
