[project]
name = "weechat-channel-server"
version = "0.2.0"
description = "Claude Code Channel MCP server bridging IRC and Claude Code"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.2.0",
    "irc>=20.0",
]

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio", "pytest-timeout"]

[project.scripts]
weechat-channel = "server:main"
